adding posts dinamically to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,12 @@
     </div>
 
     <!-- Newsfeed -->
-    <div id="modal-newsfeed" class="modal">
+    <div class="container">
+      <ul class="posts">
+
+      </ul>
+    </div>
+    <!-- <div id="modal-newsfeed" class="modal">
       <div class="modal-content">
         <form id="create-post">
           <div class="input-field">
@@ -86,7 +91,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
 
 
     <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase-app.js"></script>
