reacomode las funciones en main y ya detecta el boton de cerrar sesion

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   };
   firebase.initializeApp(config);
  </script>
+ <script src="main.js"></script>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Check Point Red Social Gamer</h1>
@@ -45,17 +47,12 @@
     </form>
     
 
-    <div id="content">
-
+    <div id="content" style="display:none">
+        <h2>Bienvenido</h2>
+        <button id="close1">Cerrar sesión</button>
     </div>
 
 
-
-
-
-
- <link rel="stylesheet" href="style.css">
- <script src="main.js"></script>
  
     
 </body>
