--- a/src/index.html
+++ b/src/index.html
@@ -92,12 +92,16 @@
         <h2>Sign up</h2>
         <form id="signup-form">
           <div class="input-field">
-            <input type="email" id="signup-email" required>
             <label for="signup-email">E-mail</label>
+            <input type="email" id="signup-email" required>
+            <label for="verified-email">Verificar e-mail</label>
+            <input type="email" id="verified-email" required>
           </div>
           <div class="input-field">
-            <input type="password" id="signup-password" required>
             <label for="signup-password">Contraseña</label>
+            <input type="password" id="signup-password" required>
+            <label for="verified-password">Verificar contraseña</label>
+            <input type="password" id="verified-password" required>
           </div>
           <input type="submit" value="Registrar">
         </form>
@@ -126,15 +130,23 @@
     <div id="modal-account" class="modal">
       <div class="modal-content">
         <h2>Detalles de la cuenta</h2>
-        <div class="account-details"></div>
+        <form id="account-details">
+          <div class="input-field">
+            <label for="update-nickname">Nickname: </label>
+            <input type="text" id="update-nickname">
+          </div>
+          <input type="submit" value="Guardar">
+        </form>
       </div>
     </div>
 
     <!-- Newsfeed -->
     <div class="container">
-      <ul class="posts">
-
-      </ul>
+      <form id='add-post'>
+        <input type="text" name="post" placeholder="Escribe aquí :)">
+        <button>Publicar</button>
+      </form>
+      <ul id="posts-list"></ul>
     </div>
     <!-- <div id="modal-newsfeed" class="modal">
       <div class="modal-content">
