Cambiar label de la publicación por input de texto para editarla

--- a/src/index.html
+++ b/src/index.html
@@ -159,6 +159,13 @@
         </form>
       </div>
     </div> -->
+    <!-- UPDATE POSTS TEST -->
+    <div>
+      <form id='test'>
+        <span id="spanTest">Holi</span>
+        <button id='buttonTest'>Editar</button>
+      </form>
+    </div>
 
 
     <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase-app.js"></script>
